--- a/src/components/Eclair.astro
+++ b/src/components/Eclair.astro
@@ -2,7 +2,7 @@
   <div class='eclair'>
     <svg height='0' width='0'>
       <defs>
-        <clipPath id='eclairSvg'>
+        <clipPath id='eclairSvg' clipPathUnits="objectBoundingBox" transform="scale(0.0012391573729864, 0.00067204301075269)">
           <path
             fill-rule='evenodd'
             clip-rule='evenodd'
@@ -18,16 +18,16 @@
 <style lang='scss'>
   .eclairWrapper {
     filter: drop-shadow(0px 0px 5px #fff);
-    width: 800px;
-    height: 1500px;
+    width: 50%;
+    height: 100%;
     position: absolute;
     top: 0;
-    left: 45%;
+    left: 50%;
     transform: translateX(-50%);
     z-index: 1;
     .eclair {
-      width: 800px;
-      height: 1500px;
+      width: 100%;
+      height: 100%;
       clip-path: url(#eclairSvg);
       position: relative;
       overflow: hidden;
@@ -77,6 +77,11 @@
       100% {
         transform: translateY(-66%);
       }
+    }
+  }
+  @media screen and (max-width: 600px) {
+    .eclairWrapper {
+      width: 100vw;
     }
   }
 </style>
