--- a/src/components/HeroFullstack.astro
+++ b/src/components/HeroFullstack.astro
@@ -15,6 +15,7 @@ import Aurora from "./Aurora.astro";
   .heroFullStack {
     background: url('/images/banquise.jpg');
     background-size: cover;
+    background-position: center 20%;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -43,6 +44,15 @@ import Aurora from "./Aurora.astro";
       .boldIt {
         font-weight: bold;
         font-style: italic;
+      }
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    .heroFullStack {
+      h1 {
+        font-size: 2rem;
+        max-width: 80%;
       }
     }
   }
