--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -111,6 +111,30 @@ import Footer from "../components/Footer.astro";
     overflow-x: clip;
   }
 
+  h1 {
+    color: white;
+    font-size: 4rem;
+    font-family: Poppins;
+    font-weight: 300;
+    text-align: center;
+    max-width: 60rem;
+    line-height: 1.125em;
+    z-index: 2;
+    text-shadow:
+      0px 0px 20px #000000aa,
+      0px 0px 0.2em #000000aa;
+    strong {
+      font-weight: 900;
+    }
+    em {
+      font-weight: 200;
+    }
+    .boldIt {
+      font-weight: bold;
+      font-style: italic;
+    }
+  }
+
   a {
     cursor: pointer;
   }
