--- a/src/components/HeroFullstack.astro
+++ b/src/components/HeroFullstack.astro
@@ -2,8 +2,8 @@
 import Aurora from "./Aurora.astro";
 ---
 
-<section class='heroFullStack'>
-  <h1>
+<section class='heroFullStack' id="hero">
+  <h1 id="title">
     Des <strong>sites web</strong> pour les <em>grands</em> et les <span
       class='boldIt'>petits projets</span
     >
@@ -23,37 +23,5 @@ import Aurora from "./Aurora.astro";
     justify-content: center;
     align-items: center;
     position: relative;
-    h1 {
-      color: white;
-      font-size: 4rem;
-      font-family: Poppins;
-      font-weight: 300;
-      text-align: center;
-      max-width: 60rem;
-      line-height: 1.125em;
-      z-index: 2;
-      text-shadow:
-        0px 0px 20px #000000aa,
-        0px 0px 0.2em #000000aa;
-      strong {
-        font-weight: 900;
-      }
-      em {
-        font-weight: 200;
-      }
-      .boldIt {
-        font-weight: bold;
-        font-style: italic;
-      }
-    }
-  }
-
-  @media screen and (max-width: 600px) {
-    .heroFullStack {
-      h1 {
-        font-size: 2rem;
-        max-width: 80%;
-      }
-    }
   }
 </style>
