--- a/src/components/HeroSiteWeb.astro
+++ b/src/components/HeroSiteWeb.astro
@@ -1,6 +1,6 @@
-<section class='heroSiteWeb'>
+<section class='heroSiteWeb' id="hero">
   <div class='spacer'></div>
-  <h1>
+  <h1 id="title">
     Des <strong>sites web</strong> pour les <em>grands</em> et les <span
       class='boldIt'>petits projets</span
     >
@@ -36,29 +36,6 @@
     align-items: center;
     padding: 5rem 12%;
     position: relative;
-    h1 {
-      color: white;
-      font-size: 4rem;
-      font-family: Poppins;
-      font-weight: 300;
-      text-align: center;
-      max-width: 60rem;
-      line-height: 1.125em;
-      z-index: 2;
-      text-shadow:
-        0px 0px 20px #000000aa,
-        0px 0px 0.2em #000000aa;
-      strong {
-        font-weight: 900;
-      }
-      em {
-        font-weight: 200;
-      }
-      .boldIt {
-        font-weight: bold;
-        font-style: italic;
-      }
-    }
     .spacer {
       margin-bottom: auto;
     }
@@ -356,9 +333,6 @@
   @media screen and (max-width: 600px) {
     .heroSiteWeb {
       padding: 2rem 1rem;
-      h1 {
-        font-size: 3rem;
-      }
       .partners {
         gap: 2rem;
         .partner {
