--- a/src/components/BorderedButton.astro
+++ b/src/components/BorderedButton.astro
@@ -68,6 +68,7 @@ const { addedClasses = "" } = Astro.props;
   }
   .borderedButton {
     color: white;
+    cursor: pointer;
     background: #ffffff0a;
     border: 1px solid white;
     border-radius: 5rem;
