--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,9 @@ import Layout from "../layouts/Layout.astro";
     <LastWork />
     <SimpleSection />
     <Technologies />
-    <Partners />
+    <section>
+      <Partners />
+    </section>
     <ContactSection />
   </main>
 </Layout>
