--- a/src/components/Strengths.astro
+++ b/src/components/Strengths.astro
@@ -256,10 +256,13 @@ import Eclair from "./Eclair.astro";
       .services {
         padding-top: 0;
         padding-bottom: 10rem;
-        gap: 5rem;
+        gap: 10rem;
         .service {
           gap: 1rem;
-          line-height: 1.5em;
+          p {
+            font-size: 1rem;
+            line-height: 2em;
+          }
           &:nth-of-type(2) {
             h3,
             p {
