--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -17,12 +17,14 @@ const { className, clientName, projectDescription, link, linkLabel } = Astro.pro
   .projectCard {
     display: flex;
     flex-direction: column;
-    gap: 5rem;
+    justify-content: center;
+    gap: 2rem;
   }
   .description {
     position: relative;
     color: white;
-    left: 25%;
+    left: 20%;
+    width: 80%;
     opacity: 0;
     transition: opacity 0.2s ease-in-out;
     display: flex;
