--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -461,7 +461,7 @@ import PortfolioLayout from "../layouts/PortfolioLayout.astro";
   :global(.scrollableCard) {
     position: absolute;
     width: 50%;
-    height: 75vh;
+    height: calc(100vh - 20rem);
     top: 50%;
     left: 37%;
     @for $i from 0 through 25 {
