--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -21,6 +21,7 @@ const { className, clientName, projectDescription, link, linkLabel } = Astro.pro
     :global(img) {
       object-fit: contain;
       object-position: left bottom;
+      align-self: end;
     }
   }
   .description {
