--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -22,6 +22,8 @@ const { className, clientName, projectDescription, link, linkLabel } = Astro.pro
       object-fit: contain;
       object-position: left bottom;
       align-self: end;
+      max-width: 100%;
+      max-height: 100%;
     }
   }
   .description {
