--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,12 +1,22 @@
 ---
 import BorderedButton from "./BorderedButton.astro";
 
-const { className, clientName, projectDescription, link, linkLabel } = Astro.props;
+const {
+  className,
+  clientName,
+  projectDescription,
+  link,
+  linkLabel,
+  mockup,
+  mockupName,
+} = Astro.props;
 ---
 
 <div class=`projectCard ${className}`>
-  <slot />
-  <div class="description">
+  <div class='mockup'>
+    <img src={mockup} alt={mockupName} />
+  </div>
+  <div class='description'>
     <h2>{clientName}</h2>
     <p>{projectDescription}</p>
     {link && <BorderedButton>{linkLabel}</BorderedButton>}
@@ -15,20 +25,24 @@ const { className, clientName, projectDescription, link, linkLabel } = Astro.pro
 
 <style lang='scss'>
   .projectCard {
-    display: grid;
-    grid-template-rows: 1fr 20rem;
+    display: flex;
+    flex-direction: column;
     gap: 2rem;
+    .mockup {
+      min-height: 0;
+      flex: 1;
+    }
     :global(img) {
       object-fit: contain;
       object-position: left bottom;
-      align-self: end;
-      max-width: 100%;
-      max-height: 100%;
+      width: 100%;
+      height: 100%;
     }
   }
   .description {
     position: relative;
     color: white;
+    height: 11rem;
     left: 20%;
     width: 80%;
     opacity: 0;
