--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -14,15 +14,17 @@ import PortfolioLayout from "../layouts/PortfolioLayout.astro";
         projectDescription="Réalisation d'un site vitrine NuxtJS alimenté par le CMS Strapi. Ajout d'un tunnel de commande complexe 100% paramétrable."
         link='lamie-mutuelle.com'
         linkLabel='Voir le site'
+        mockup="/images/project-lamie.png"
+        mockupName="Lamie Mutuelle"
       >
-        <img src='/images/project-lamie.png' alt='Lamie' />
       </ProjectCard>
       <ProjectCard
         className='scrollableCard'
         clientName='SpreadTheLive'
         projectDescription="Application mobile de streaming video d'événements sportifs en React"
+        mockup="/images/project-spreadthelive.png"
+        mockupName="SpreadTheLive"
       >
-        <img src='/images/project-spreadthelive.png' alt='SpreadTheLive' />
       </ProjectCard>
       <ProjectCard
         className='scrollableCard'
@@ -30,8 +32,9 @@ import PortfolioLayout from "../layouts/PortfolioLayout.astro";
         projectDescription='Site vitrine alimenté par le CMS git-based Decap.'
         link='pauline-gorlier.com'
         linkLabel='Voir le site'
+        mockup="/images/project-pauline.png"
+        mockupName="Pauline Gorlier"
       >
-        <img src='/images/project-pauline.png' alt='Pauline Gorlier' />
       </ProjectCard>
       <div class='scrollableCard contactMe'>
         <p>
