--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -67,6 +67,7 @@ const {
   @media screen and (max-width: 600px) {
     .projectCard {
       gap: 1rem;
+      top: 50%;
     }
     .description {
       left: 0;
