--- a/src/components/WebsiteCreation.astro
+++ b/src/components/WebsiteCreation.astro
@@ -37,13 +37,11 @@ import SquareHammer from "./SquareHammer.astro";
   .websiteCreation {
     background-color: #ccd6e8;
     box-shadow:
-      0 150px 150px 150px #cdd6e8,
-      0 -150px 150px 150px #ccd6e8;
+      0 150px 150px 150px #cdd6e8;
     position: relative;
     display: flex;
     flex-direction: column;
     gap: 10rem;
-    z-index: 2;
     padding: 0 12%;
     h2 {
       color: rgba(255, 255, 255, 0.4);
