--- a/src/components/HeroFullstack.astro
+++ b/src/components/HeroFullstack.astro
@@ -1,5 +1,6 @@
 ---
 import Aurora from "./Aurora.astro";
+import Clouds from "./Clouds.astro";
 ---
 
 <section class='heroFullStack' id="hero">
@@ -9,6 +10,7 @@ import Aurora from "./Aurora.astro";
     >
   </h1>
   <Aurora />
+  <Clouds />
 </section>
 
 <style lang="scss">
@@ -23,5 +25,6 @@ import Aurora from "./Aurora.astro";
     justify-content: center;
     align-items: center;
     position: relative;
+    z-index: 10;
   }
 </style>
