--- a/src/components/Ecoconception.astro
+++ b/src/components/Ecoconception.astro
@@ -59,6 +59,7 @@
       gap: 2rem;
       color: white;
       width: 50%;
+      padding-bottom: 2rem;
       h3 {
         color: white;
         font-size: 2rem;
